# LeetCodeTasks

./: .gitignore  README.md
3046-Split-the-Array/: CMakeLists.txt  main.cpp
3364-Minimum-Positive-Sum-Subarray/: CMakeLists.txt  main.cpp
twoSum/: CMakeLists.txt  Solution.cpp  Solution.h  TestModule_implementation.cxx  TestModule_interface.cxx  main  main.cpp
twoSum/gcm.cache/: TestModule.gcm
